--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
         <div class="container_contatos">
             <div class="container--email">
                 <i class="fas fa-envelope"></i>
-                <h1 class="E-mail">nicolasfune.dev@outlook.com</h1>
+                <h1 class="E-mail">*************</h1>
             </div>
             <div class="icons">
-                <a href="https://api.whatsapp.com/send?phone=+5531996661661" target="_blank">
+                <a href="#" target="_blank">
                    <div class="layer">
                       <span></span>
                       <span></span>
@@ -312,7 +312,7 @@
                       Whatapp
                    </div>
                 </a>
-                <a href="https://www.instagram.com/agencia.forja/" target="_blank">
+                <a href="#" target="_blank">
                    <div class="layer">
                       <span></span>
                       <span></span>
